# Spotify-Soul-Recommender

./: README.md  SpotifySoulReccomender (1).ipynb  SpotifySoulReccomender (2).ipynb  SpotifySoulReccomender.ipynb  app.py  credentials.py  getFeatures.py  getUserFavsFeatures.py  initialiseDataset.py  model.py  pyproject.toml  recommendations_library.csv
