[tool.poetry]
name = "ml-music-project"
version = "0.1.0"
description = ""
authors = ["Natasha Wachira"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
spotipy = "^2.23.0"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
imblearn = "^0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
